# translator

./: AI translation instruction.md  ai_translates.py  ai_translator_addon.py  document_translator.py  instructions.md
image-translator/: pyproject.toml  readme.md  requirements.txt  structure.md
image-translator/config/: default_config.yaml
image-translator/examples/: basic_translation.py  batch_processing.py
image-translator/src/image-translator/: cli.py
image-translator/src/image-translator/core/: font_manager.py  inpainter.py  ocr_engine.py  pipeline.py  text_renderer.py  translator.py
image-translator/tests/: conftest.py
webapp/: .env.example  INSTALL.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  app.py  debug_test.py  requirements-minimal.txt  requirements.txt  run.sh  setup.sh
webapp/core/: __init__.py  translation_services.py
webapp/models/: database.py  user.py
webapp/services/: language_detector.py  translation_manager.py
webapp/static/css/: style.css
webapp/static/js/: app.js
webapp/templates/: index.html  login.html  register.html  subscription.html
