[build-system]
requires = ["setuptools>=67.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-translator-macos"
version = "1.0.0"
description = "Production-ready image translation for English ↔ Chinese on macOS"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "[email protected]"}
]
keywords = ["ocr", "translation", "chinese", "english", "image-processing", "macos"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "paddlepaddle>=3.0.0",
    "paddleocr>=3.0.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "PyMuPDF>=1.23.0",
    "pdf2image>=1.16.0",
    "python-docx>=1.0.0",
    "deep-translator>=1.11.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
imgtrans = "image_translator.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/image-translator-macos"
Documentation = "https://image-translator-macos.readthedocs.io"
Repository = "https://github.com/yourusername/image-translator-macos"

[tool.setuptools.packages.find]
where = ["src"]
include = ["image_translator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=image_translator --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]